[package]
edition = "2021"
name = "esp32c3-smart-led"
version = "0.1.0"

[[bin]]
name = "esp32c3-smart-led"
path = "./src/bin/main.rs"

[features]
office_lights = []
test_strip = []

[dependencies]
embedded-time = "0.12"
critical-section = "1.2.0"
esp-hal = { version = "1.0.0-beta.1", features = ["esp32c3", "unstable"] }
esp-backtrace = { version = "0.16.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.14.0", features = ["esp32c3"] }
esp-hal-smartled = { version = "0.16.0", features = ["esp32c3"] }
rgb = "0.8"
smart-leds = "0.4"
smart-leds-trait = "0.3"

# [dependencies.esp-hal-smartled]
# path = "../../esp-hal-community/esp-hal-smartled"
# version = "0.16.0"
# features = ["esp32c3"]

[dependencies.lighting_controller]
path = "../../lighting_controller"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
